# BrainTrail

./: .env  Makefile  README.md  docker-compose.yml  test.txt
.github/workflows/: ci.yml
api/: Dockerfile  pyproject.toml
api/app/: db.py  deps.py  main.py  models.py  schemas.py  seed.py
api/app/core/: config.py  security.py
api/app/crud/: users.py
api/app/routers/: auth.py  goals.py  progress.py  resources.py  tutor.py
api/app/services/: cache.py  embeddings.py  llm.py  rag.py  ranking.py
infra/nginx/: default.conf
web/: Dockerfile  package.json
web/src/app/: layout.tsx  page.tsx
web/src/app/learn/[moduleId]/: page.tsx
web/src/app/roadmap/[id]/: page.tsx
web/src/app/setup/: page.tsx
web/src/lib/: api.ts
